--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Hello World HTML</h1>
     <p>Saya Abi fajar ahmad fauzi, NIM: 41215619</p>
-    <img src="fajar.jpeg" alt="" />
+    <img src="fajar.jpeg" />
     <style>
       h1 {
         color: blue;
