--- a/index.html
+++ b/index.html
@@ -4,22 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Tugasweb</title>
   </head>
   <body>
-    <h1>Hello World HTML</h1>
-    <p>Saya Abi fajar ahmad fauzi, NIM: 41215619</p>
-    <img src="fajar.jpeg" />
+    <center>
+      <h1>Hello World HTML</h1>
+      <h2>
+        <p>Abi fajar ahmad fauzi</p>
+        <p>NIM: 41215619</p>
+        <img src="fajaraf.jpeg" />
+      </h2>
+    
     <style>
       h1 {
         color: blue;
         cursor: pointer;
         transition: 0.2s;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       }
 
       h1:hover {
         color: red;
         letter-spacing: 2px;
+      }
+
+      p {
+        font-family: monospace;
       }
 
       img {
@@ -38,10 +49,31 @@
         opacity: 100%;
         box-shadow: 1px 1px 6px red;
       }
-    </style>
 
-    <button onclick="alert('Hello world Javascript!')">
-      Hello Javascript!
-    </button>
+      a {
+        color: blue;
+        cursor: pointer;
+        transition: 0.2s;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      }
+
+
+
+    </style>
+      <button onclick="alert('Hello world Javascript!')">Hello Javascript!
+      </button>
   </body>
 </html>
+<p>
+  <div>
+    <a href="https://google.com" target="_blank">Google</a>  |
+    <a href="https://github.com/Tokosepatucirebon" target="_blank">Github</a>  |
+    <a href="https://www.instagram.com/vreez_ty/" target="_blank">Instagram</a>  |
+    <a href="https://wa.me/qr/YROWTWUEWMWZG1" target="_blank">Whatshapp</a>
+  </div>
+
+  </div>
+</p>
+<p>Teman Ikmi Cirebon : <a href="pages/5bestie.html">5 My Friends</a></p>
+<p>Teman Ikmi Cirebon : <a href="pages/10bestie.html">10 My Friends</a></p>
+</center>
