--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
 
   </div>
 </p>
-<p>Teman Ikmi Cirebon : <a href="pages/5bestie.html">5 My Friends</a></p>
-<p>Teman Ikmi Cirebon : <a href="pages/10bestie.html">10 My Friends</a></p>
+<p>Teman Ikmi Cirebon : <a href="./p03css/5bestie.html">5 My Friends</a></p>
+<p>Teman Ikmi Cirebon : <a href="./p03/10bestie.html">10 My Friends</a></p>
 </center>
