--- a/p03/10bestie.html
+++ b/p03/10bestie.html
@@ -134,7 +134,7 @@
         <tr>
             <td>
                 <p>
-                    <a href="../tugasweb.html">Back to home</a>
+                    <a href="../index.html">Back to home</a>
                 </p>
             </td>
         </tr>
