--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Tugasweb</title>
   </head>
   <body>
@@ -74,6 +74,6 @@
 
   </div>
 </p>
-<p>Teman Ikmi Cirebon : <a href="./p03css/5bestie.html">5 My Friends</a></p>
-<p>Teman Ikmi Cirebon : <a href="./p03/10bestie.html">10 My Friends</a></p>
+<p>Teman Ikmi Cirebon : <a href="5bestie.html">5 My Friends</a></p>
+<p>Teman Ikmi Cirebon : <a href="10bestie.html">10 My Friends</a></p>
 </center>
