--- a/tugasweb.html
+++ b/tugasweb.html
@@ -74,8 +74,10 @@
 
   </div>
 </p>
+<p>Form Pendaftaran   : <a> href="p04frmcss.html">Form.css IKMI</a><p>
 <p>Form Pendaftaran   : <a href="formlv1.html">Form IKMI</a></p>
-<p>Teman Ikmi Cirebon : <a href="p05-jquery-delete.html">JqueryDelete</a></p>
+<p>Teman Ikmi Cirebon : <a href="p05-jquery-delete.html">Tabel Jquery_Delete</a></p>
+<P>Teman Ikmi Cirebon : <a> href="p03jquery.html>Tabel Jquery</a><p>
 <p>Teman Ikmi Cirebon : <a href="5bestie.html">5 My Friends</a></p>
 <p>Teman Ikmi Cirebon : <a href="10bestie.html">10 My Friends</a></p>
 </center>
