--- a/p04frmcss.html
+++ b/p04frmcss.html
@@ -285,7 +285,8 @@
     <br>
     <br>
     <center>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Kembali">
+        <input type="submit" value="Kirim">
     </center>
 </body>
 </html>
