--- a/p04frmcss.html
+++ b/p04frmcss.html
@@ -285,8 +285,8 @@
     <br>
     <br>
     <center>
-        <input type="submit" value="Kembali">
-        <input type="submit" value="Kirim">
+        <button type="submit"><a href="tugasweb.html"></button>
+            <button type="submit" value="Kirim"></button>
     </center>
 </body>
 </html>
